<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optitrack4px4</name>
  <version>1.0.0</version>
  <description>OptiTrack4PX4 – A ROS 2 OptiTrack (NatNet) to PX4 External Vision Bridge</description>
  <maintainer email="info@opt4smart.eu">OPT4SMART group</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>mocap_msgs</depend>

  <!-- mocap_px4_relays is needed at runtime for relay nodes (visual_odometry_relay, full_state_relay) -->
  <!-- <exec_depend>mocap_px4_relays</exec_depend> -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
